// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Chartmogul's sendCustomer destination action: all fields 1`] = `
Object {
  "address": Object {
    "city": "nX10Ilka9K6F",
    "country": "nX10Ilka9K6F",
    "postal_code": "nX10Ilka9K6F",
    "state": "nX10Ilka9K6F",
    "street": "nX10Ilka9K6F",
  },
  "created_at": "2021-02-01T00:00:00.000Z",
  "description": "nX10Ilka9K6F",
  "email": "fiwhaebi@jemtu.ki",
  "group_id": "nX10Ilka9K6F",
  "message_id": "nX10Ilka9K6F",
  "name": "nX10Ilka9K6F",
  "sent_at": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "nX10Ilka9K6F",
  "user_id": "nX10Ilka9K6F",
  "website": "nX10Ilka9K6F",
}
`;

exports[`Testing snapshot for Chartmogul's sendCustomer destination action: required fields 1`] = `
Object {
  "group_id": "nX10Ilka9K6F",
  "message_id": "nX10Ilka9K6F",
  "sent_at": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "nX10Ilka9K6F",
  "user_id": "nX10Ilka9K6F",
}
`;
